# oil_simulation

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
cpp/: reservoir_core.cpp
